--- a/about.css
+++ b/about.css
@@ -1,62 +1,51 @@
-.about-section {
-  padding: 40px;
-  background-color: #f9f9f9;
-  ;
-  max-width: 800px; /* Define uma largura máxima para a div */
-  margin: 0 auto; /* Centraliza horizontalmente */
-  text-align: center; /* Centraliza o texto dentro da div (se desejar) */
+.about-section h2, .about-text p {
+    margin-bottom: 20px;
 }
-  
-  .about-section h2  {
+
+.about-section {
+    padding: 40px;
+    background-color: #f9f9f9;
+    max-width: 800px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.about-section h2 {
     text-align: center;
     font-size: 2.5rem;
     color: #333;
-    margin-bottom: 20px;
-  }
-  
-  .about-content {
+}
+
+.about-content {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
     gap: 30px;
     max-width: 1080px;
-  }
-  
-  .about-text {
-    text-align: center;
+}
+
+.about-text {
+    text-align: justify; /* Justifica o texto */
     flex: 1;
     padding: 20px;
     font-size: 1.2rem;
     color: #555;
     line-height: 1.6;
-  }
-  
-  
-  .about-text p {
-    margin-bottom: 20px;
-  }
-  
-  
-  
-  
-  
-  @media (max-width: 768px) {
+}
+
+@media (max-width: 768px) {
     .about-content {
-      flex-direction: column;
-      text-align: center;
+        flex-direction: column;
+        text-align: center;
     }
-  
+    
     .about-text {
-      padding: 10px;
+        padding: 10px;
+        text-align: justify; /* Mantém o texto justificado no mobile */
     }
-  
-  
-  
+    
     .about-section h2 {
-      font-size: 2rem;
+        font-size: 2rem;
     }
-  
-   
-  }
-  
+}
