--- a/style.css
+++ b/style.css
@@ -204,6 +204,10 @@ main {
     line-height: 1.6;
     color: #34495E;
   }
+  #p-legis{
+    margin-top: 1%;
+    margin-bottom: 1%;
+  }
   
   .legislativo ul {
     list-style-type: disc;
@@ -229,6 +233,8 @@ main {
     border-top: 2px solid #E67E22;
     padding-top: 10px;
 }
+
+/* Pagina curso*/
 .courses-page {
     max-width: 1800px;
     margin: 0 auto;
@@ -306,6 +312,63 @@ main {
     background-color: #0077b3;
     transform: translateY(-3px);
   }
+
+  /* Pagina privacidade*/
+/* Define o espaçamento para o container principal */
+.privacy-policy .container {
+    max-width: 900px;
+    margin: 0 auto;
+    padding: 20px;
+    line-height: 1.6;
+}
+
+/* Define o espaçamento para os parágrafos */
+.privacy-policy p {
+    margin-bottom: 20px; /* Espaço entre parágrafos */
+    line-height: 1.6; /* Aumenta o espaçamento entre as linhas */
+}
+
+/* Define o espaçamento para títulos */
+.privacy-policy h1,
+.privacy-policy h2,
+.privacy-policy h3 {
+    margin-top: 30px; /* Espaçamento acima dos títulos */
+    margin-bottom: 15px; /* Espaçamento abaixo dos títulos */
+    line-height: 1.4; /* Ajusta o espaçamento entre as linhas dos títulos */
+}
+
+/* Define o espaçamento entre itens de lista */
+.privacy-policy ul {
+    margin-bottom: 20px;
+}
+
+.privacy-policy ul li {
+    margin-bottom: 10px; /* Espaço entre os itens da lista */
+}
+
+/* Ajusta o título principal */
+.privacy-policy h1 {
+    font-size: 2em;
+    margin-bottom: 20px; /* Maior espaço abaixo do título principal */
+}
+
+/* Ajusta os títulos secundários */
+.privacy-policy h2 {
+    font-size: 1.5em;
+}
+
+/* Ajusta os subtítulos */
+.privacy-policy h3 {
+    font-size: 1.2em;
+}
+
+/* Remove qualquer margem adicional desnecessária nos últimos elementos */
+.privacy-policy p:last-child, 
+.privacy-policy ul:last-child {
+    margin-bottom: 0;
+}
+
+
 /* queries para tabletes*/
 @media(min-width: 768px){
     .cabecalho{
@@ -383,13 +446,22 @@ main {
         
     }
     .cabecalho-div {
+        display: flex;
         flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
     }
 
     .logo-titulo {
         display: flex;
         align-items: center;
-        gap: 10px;
+        gap: 5px;
+    }
+    .titulo-header {
+        color: #fff;
+        font-size: 20px;
+        margin: 0;
+        line-height: 40px; /* Define a altura da linha para alinhar com a altura da logo */
     }
     .main-nav .icon {
         display: none; /* Esconde os ícones na versão desktop */
@@ -412,6 +484,8 @@ main {
         display: flex;
         flex-direction: row;
         gap: 10px;
+        margin: 0;
+        padding: 0;
     }
 
     .ul li {
@@ -423,6 +497,8 @@ main {
         font-size: 18px;
         padding: 5px 10px;
         text-decoration: none;
+        display: flex;
+        align-items: center;
     }
 
 
